# jora-cli

./: .env.template  .gitignore  API_TOKEN_GUIDE.md  BATCH_PROCESSING_GUIDE.md  CLAUDE.md  PROMPTS.md  README.md  SUCCESS_SUMMARY.md  SUMMARY.md  batch_demo.py  debug_auth.py  example.py  jira_manager.py  pyproject.toml  run.sh  setup.py  test_api.py
.claude/skills/: jora.md
.github/: copilot-instructions.md
.github/skills/jora/: SKILL.md
src/jora/: __init__.py  cli.py
src/jora/commands/: __init__.py  batch.py  config_cmd.py  context_cmd.py  issue.py  search.py  skill_cmd.py  worklog.py
src/jora/core/: client.py  config.py  models.py
src/jora/utils/: output.py  time_utils.py
