[project]
name = "jora"
version = "0.3.0"
description = "LLM-friendly Jira CLI for humans and agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "jira>=3.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "pytz>=2024.1",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
jora = "jora.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jora"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]
